@@ -1,3 +1,8 @@
+2006-05-11  Mark Wielaard  <mark@klomp.org>
+
+	* java/awt/geom/GeneralPath.java (WIND_EVEN_ODD, WIND_NON_ZERO):
+	Fully qualify PathIterator constants
+
 2006-05-10  Roman Kennke <kennke@aicas.com>
 
 	PR classpath/27481
